# climate-action-land-consumption

./: .env.base_template  .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config-optional-linting.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.Kaniko  README.md  pyproject.toml  renovate.json
.gitlab/issue_templates/: Default.md
land_consumption/: artifact.py  calculate.py  calculation.py  info.py  input.py  operator_worker.py  plugin.py  utils.py
land_consumption/components/: artifact.py  calculation.py  categorize.py  land_consumption.py  landuse_category_mappings.py  osm_requests.py  process_geometries.py  utils.py
land_consumption/core/: info.py  operator_worker.py  settings.py
ohsome_log/: ohsome_2024-11-15T135143.json
plugin_blueprint/: input.py  operator_worker.py
resources/info/: description.md  methodology.md  purpose.md  sources.bib
resources/test/: ohsome_area_response.geojson  ohsome_count_response.json  osm_from_parquet_response.geojson  test_clip_to_aoi_data.gpkg
test/: conftest.py  test_artifact.py  test_calculate.py  test_calculation.py  test_operator_worker.py  test_operator_worker.test_get_basic_table.approved.txt  test_operator_worker.test_get_treemap.received.txt  test_plugin.py  test_utils.py
test/cassettes/test_utils/: test_get_categories_gdf_with_features.yaml  test_get_osm_data_from_parquet.yaml
test/components/: test_artifact.py  test_calculation.py  test_calculation.test_aggregate_by_categories.approved.txt  test_categorize.py  test_land_consumption.py  test_land_consumption.test_get_basic_table.approved.txt  test_land_consumption.test_get_basic_table_non_100.approved.txt  test_land_consumption.test_get_detailed_table.approved.txt  test_land_consumption.test_get_detailed_table_non_100.approved.txt  test_land_consumption.test_table_sorted.approved.txt  test_osm_requests.py  test_process_geometries.py  test_utils.py
test/components/cassettes/test_categorize/: test_get_categories_gdf_no_features.yaml
test/core/: test_plugin.py
test/core/cassettes/test_plugin/: test_plugin_compute_request.yaml
test/resources/: segmentation.tiff
