[tool.poetry]
name = "land-consumption"
version = "0.0.1"
description = "This is the land consumption indicator."
authors = ["Charles Hatfield <charles.hatfield@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = { git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.4.3" }
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
shapely = "^2.0.2"
pyiceberg = "^0.8.0"
pyarrow = "^18.1.0"
tqdm = "^4.67.1"



[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^6.0.0"
requests-mock = "^1.12.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.coverage.run]
omit = ["test/*", "test/test_plugin.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
