[tool.poetry]
name = "land-consumption"
version = "1.0.2"
description = "This is the land consumption indicator."
authors = ["Charles Hatfield <charles.hatfield@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = { git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.4.3" }
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
shapely = "^2.0.2"
pyiceberg = "^0.9.0"
pyarrow = "^21.0.0"
approvaltests = "^15.1.0"
duckdb = "^1.4.1"
memray = "^1.18.0"
ohsome = "^0.4.0"



[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
requests-mock = "^1.12.1"
responses = "^0.24.1"
pytest-recording = "^0.13.4" # TODO: remove if not used after fixing the geoparqued size issue

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.ruff]
line-length = 120
[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select=[
    # defaults
    "F",
    "E4", "E7", "E9",

    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions

    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*", "test/test_plugin.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
