[project]
name = "land-consumption"
version = "1.0.4"
description = "This is the land consumption indicator."
authors = [{ name = "Charles Hatfield", email = "charles.hatfield@heigit.org" },]
readme = "README.md"
requires-python = ">=3.13.5,<3.14"

dependencies = [
    "climatoology @ git+ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git@7.0.0",
    "pydantic (>=2.5.3,<3.0.0)",   # see https://gitlab.heigit.org/climate-action/climatoology/-/issues/105
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "shapely (>=2.0.2,<3.0.0)",
    "pyiceberg (>=0.10.0,<1.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "approvaltests (>=15.1.0,<16.0.0)",
    "duckdb (>=1.4.1,<2.0.0)",
    "memray (>=1.18.0,<2.0.0)",
    "ohsome (>=0.4.0,<1.0.0)",
    "ohsome-filter-to-sql (>=0.1.0,<1.0.0)",
]

[project.urls]
repository = "https://gitlab.heigit.org/climate-action/plugins/land-consumption"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^7.0.0"
requests-mock = "^1.12.1"
responses = "^0.25.0"
pytest-recording = "^0.13.4" # TODO: remove if not used after fixing the geoparqued size issue

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"

[tool.ruff]
line-length = 120
[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select=[
    # defaults
    "F",
    "E4", "E7", "E9",

    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions

    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]

[tool.coverage.run]
omit = ["test/*", "test/test_plugin.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
